# cloud-orchestration

./: .env.example  README.md  cloud-orchestration.code-workspace  pyproject.toml
.github/workflows/: release-orchestration.yml
bootstrap/: README.md
bootstrap/asap_orchestrator/: __init__.py  cde_manager.py  collection_manager.py  zenodo_manager.py
bootstrap/references/: collections_references.json  datasets_references.json  release_summary.json
bootstrap/references/VWB/: generic_contents.py
bootstrap/scripts/: generate_release_jsons.py  populate_local_repositories.py  populate_repositories.py  process_release_csvs.py  setup_cloud_releases.py
bootstrap/templates/: README-cde.md  README-collections.md  README-datasets.md  README-releases.md
memory/: MEMORY.md  project_structure.md
scripts/: add_rio_ipsc_v0.1_DOIs.py  add_v0.1_DOIs.py  add_v0.1_Dataset_TEMPLATE.py  make_v4.0.1_release.py  make_v4.0.2_release.py  make_v4.0.3_release.py  make_v4.1.0_release.py  make_v4.1.1_release.py  make_vX_release_TEMPLATE.py
scripts/EXAMPLE/: dataset.json
src/asap_orchestrator/: __init__.py  cli.py  collection.py  dataset.py  dataset_archive.py  dataset_manager.py  dataset_release_sync.py  doi.py  doi_sync.py  github_manager.py  orchestrator.py  release.py  util.py
src/util/: doi.py  zenodo_util.py
